tests/equals/equals.exp
Error ------------------------------------------------------------ equals.js:7:2

Cannot compare number [1] to string [2].


Error ------------------------------------------------------------ equals.js:8:2

Cannot compare string [1] to number [2].



Found 2 errors
